--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Calendario ANCE Piemonte</title>
-  <link rel="stylesheet" href="STYLESS.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Vista Login -->
@@ -29,6 +29,8 @@
   <div id="app-view" style="display: none;">
     <h2>Calendario - <span id="user-role-display"></span></h2>
     <button id="logout-btn">Logout</button>
+    <!-- Pulsante per esportare in ICS -->
+    <button id="export-ics-btn">Esporta in ICS</button>
 
     <div id="add-event">
       <h3>Aggiungi Appuntamento</h3>
@@ -67,4 +69,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-<button id="export-ics-btn">Esporta in ICS</button>
