--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Calendario ANCE Piemonte</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="STYLES.css">
 </head>
 <body>
   <!-- Vista Login -->
